test/bad/classes/struct04.px

class Class def
    Test x
